--- a/vim/nvim/coc-settings.json
+++ b/vim/nvim/coc-settings.json
@@ -6,5 +6,10 @@
 	"suggest.enablePreselect": false,
 	"suggest.noselect": true,
   "explorer.file.showHiddenFiles": true,
-  "explorer.position": "floating"
+  "explorer.position": "left",
+  "texlab.build.onSave": true,
+  "texlab.build.forwardSearchAfter": true,
+  "texlab.build.args": [ "-pdf", "-interaction=nonstopmode", "-synctex=1", "-pv" ], 
+  "texlab.forwardSearch.executable": "zathura", 
+  "texlab.forwardSearch.args": ["--synctex-forward", "%l:1:%f", "%p"]
 }
