--- a/vim/nvim/coc-settings.json
+++ b/vim/nvim/coc-settings.json
@@ -10,7 +10,7 @@
   "ltex.language": "de-DE",
   "texlab.build.onSave": true,
   "texlab.build.forwardSearchAfter": true,
-  "texlab.build.args": [ "-pdf", "-interaction=nonstopmode", "-synctex=1", "-pv" ], 
+  "texlab.build.args": [ "-pdf", "-interaction=nonstopmode", "-synctex=1", "-pvc" ], 
   "texlab.forwardSearch.executable": "zathura", 
   "texlab.forwardSearch.args": ["--synctex-forward", "%l:1:%f", "%p"]
 }
