--- a/vim/nvim/coc-settings.json
+++ b/vim/nvim/coc-settings.json
@@ -7,9 +7,14 @@
 	"suggest.noselect": true,
   "explorer.file.showHiddenFiles": true,
   "explorer.position": "left",
-  "texlab.build.onSave": true,
   "texlab.build.forwardSearchAfter": true,
-  "texlab.build.args": [ "-pdf", "-interaction=nonstopmode", "-synctex=1", "-pv" ], 
-  "texlab.forwardSearch.executable": "zathura", 
-  "texlab.forwardSearch.args": ["--synctex-forward", "%l:1:%f", "%p"]
+  "texlab.build.args": [ "-pdf", "-interaction=nonstopmode", "-synctex=1", "-pvc"], 
+  "texlab.forwardSearch.executable": "okular", 
+  "texlab.forwardSearch.args": [
+    "--unique", "file:%p#src:%l%f"
+  ],
+  "coc.source.vimtex.filetypes": [
+    "tex",
+    "plaintex"
+  ]
 }
