--- a/.conky/frequential_conky.conf
+++ b/.conky/frequential_conky.conf
@@ -46,7 +46,6 @@ conky.config = {
     	extra_newline = false,
     	own_window = true,
     	stippled_borders = 0,
-    	update_interval = 1.0,
     	uppercase = false,
     	use_spacer = 'none',
     
@@ -76,10 +75,10 @@ conky.config = {
 	-- Text
 
 		-- text
-		font = 'Ubuntu:size=10',
 		
 		format_human_readable = true,
 		use_xft = true,
+		font = 'Roboto Black:size=9',
 	    max_text_width = 0,
 		short_units = true,
 		xftalpha = 1,
@@ -105,24 +104,20 @@ conky.config = {
 }
 
 conky.text = [[
-${font Ubuntu:size=36}${color1}${alignc}${time %I:%M}
-${voffset -36}${font}${color3}Date: ${alignr}${color}${time %a, %d %B %Y}
+${font Roboto Black:size=40}${color1}${alignc}${time %H:%M}
+${voffset -36}${font}${scroll 50 ${color}${texeci 60000 fortune}}
+${font}${color3}Date: ${alignr}${color}${time %a, %d %B %Y}
 ${color3}Kernel: ${alignr}${color}${kernel}
-${color3}Distro: ${alignr}${color}${execi 6000 lsb_release -d | grep 'Descr'|awk {'print $2 " " $3" " $4"" $5'}}
+${color3}Distro: ${alignr}${color}${texeci 6000 lsb_release -d | grep 'Descr'|awk {'print $2 " " $3" " $4"" $5'}}
 ${color3}Uptime: ${alignr}${color}${uptime}
-
-#------------+
-#TEMPS
-#------------+
-${font}${color1}TEMPS ${hr 2}
-${voffset 5}${color}${font}${color3}CPU: $color${execi 5 sensors | grep Tdie: | cut -c 16-19}°C${color3}${alignr}
+${color3}Last Update: ${alignr}${color}${texeci 60 ls -l /var/cache/apt/pkgcache.bin --time-style="+%T: %a, %d %B %Y" | cut -d' ' -f6,7,8,9,10}
 
 #------------+
 #CPU
 #------------+
 ${font}${color1}PROCESSOR ${hr 2}
-${voffset 5}${font}${color3}Name: $color$alignr${execi 6000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-16}
-${color3}Freq: $color${freq_g} GHz$alignr${color3}Usage: $color${cpu}%
+${voffset 5}${font}${color3}Name: $color${texeci 6000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-16}${alignr}${color3}
+${color3}Freq: $color${freq_g} GHz  ${color3}Temp: $color${texeci 5 sensors | grep Tdie: | cut -c 16-19}°C${color3}${alignr}$alignr${color3}Usage: $color${cpu}%
 ${color4}${cpugraph 26}
 #------------+
 #CPU CORES
@@ -133,6 +128,7 @@ ${voffset 2}${color3} 5${goto 45}$color${cpu cpu5}%${goto 85}${color4}${cpubar c
 ${voffset 2}${color3} 7${goto 45}$color${cpu cpu7}%${goto 85}${color4}${cpubar cpu7 13, 60}${goto 170}${color3} 8${goto 195}$color${cpu cpu8}%${goto 235}${color4}${cpubar cpu8 13, 60}
 ${voffset 2}${color3} 9${goto 45}$color${cpu cpu9}%${goto 85}${color4}${cpubar cpu9 13, 60}${goto 170}${color3}10${goto 195}$color${cpu cpu10}%${goto 235}${color4}${cpubar cpu10 13, 60}
 ${voffset 2}${color3}11${goto 45}$color${cpu cpu11}%${goto 85}${color4}${cpubar cpu11 13, 60}${goto 170}${color3}12${goto 195}$color${cpu cpu12}%${goto 235}${color4}${cpubar cpu12 13, 60}
+
 #------------+
 #PROCESSES
 #------------+
@@ -142,6 +138,7 @@ ${top name 2} ${alignr}${top cpu 2}
 ${top name 3} ${alignr}${top cpu 3}
 ${top name 4} ${alignr}${top cpu 4}
 ${top name 5} ${alignr}${top cpu 5}
+
 ${voffset 5}${color3}Threads: ${color}$threads${alignr}${color3}Running: ${color}${running_threads}
 ${color3}Processes: ${color}${processes}${alignr}${color3}Running:$color ${running_processes}
 
@@ -158,14 +155,26 @@ ${top_mem name 3} ${alignr}${top_mem mem 3}
 ${top_mem name 4} ${alignr}${top_mem mem 4}
 
 #------------+
+#DISK
+#------------+
+${font}${color1}DISKS ${hr 2}
+${color3}${texeci 6000 lsblk | awk '/disk/' | awk NF=1 |sed -e 's/$/  /'| sed ':a;/$/{N;s/\n//;ba}'}
+${voffset 5}${font}${color3}Used /: ${color}${fs_used /} ${color3}${alignr}Free: ${color}${fs_free /}
+${color4}${fs_bar /}
+${voffset 5}${font}${color3}Used /home: ${color}${fs_used /home} ${color3}${alignr}Free: ${color}${fs_free /home}
+${color4}${fs_bar /home}
+${voffset 5}${font}${color3}Read: ${font}${color}${diskio_read}${alignr}${color3}Write: ${color}${diskio_write}
+${diskiograph 24,260 32a964 ec7063 -t -l}
+
+#------------+
 #NETWORK
 #------------+
 ${font}${color1}NETWORK ${hr 2}
-${voffset 5}${font}${color3}${addr enp37s0}${alignr}${font}${color}${if_existing /sys/class/net/enp37s0/operstate up}ONLINE${else}OFFLINE${endif}
-${font}${color}
-${color3}Down: ${color}${downspeed enp37s0}/s  ${color3}${alignr} Total: ${color}${totaldown enp4s0}
-${color4}${downspeedgraph enp37s0 30}${color}
+${voffset 5}${font}${color3}${addr enp37s0} / ${texeci 60 ip a | grep inet | grep -vw lo | grep -v inet6 | cut -d \/ -f1 | sed 's/[^0-9\.]*//g' | tail -n 1}${alignr}${font}${color}${if_existing /sys/class/net/enp37s0/operstate up}ONLINE${else}OFFLINE${endif}
 
-${color3}Up: ${color}${upspeed enp4s0}/s      ${color3}${alignr} Total: ${color}${totalup enp4s0}
-${color4}${upspeedgraph enp4s0 30 }${color}
+${color3}Down: ${color}${downspeed enp37s0}/s  ${color3}${alignr} Total: ${color}${totaldown enp37s0}
+${color4}${downspeedgraph enp37s0 30}${color}
+${color3}Up: ${color}${upspeed enp37s0}/s      ${color3}${alignr} Total: ${color}${totalup enp37s0}
+${color4}${upspeedgraph enp37s0 30 }${color}
+#TODO: Add Graphics card and used ports and connections(ip+protocol), weather, list all drives/paritions, most twittered/googled, news
 ]]
