--- a/.conky/frequential_conky.conf
+++ b/.conky/frequential_conky.conf
@@ -37,7 +37,7 @@ conky.config = {
 		net_avg_samples = 2,
 		no_buffers = true,
 		temperature_unit = 'celsius',
-		update_interval = 0.5,
+		update_interval = 1,
 		imlib_cache_size = 0,
     	cpu_avg_samples = 2,
     	no_buffers = true,
@@ -104,7 +104,7 @@ conky.config = {
 }
 
 conky.text = [[
-${font Roboto Black:size=40}${color1}${alignc}${time %H:%M}
+${font Roboto Black:size=45}${color1}${alignc}${time %H:%M}
 ${voffset -36}${font}${scroll 50 ${color}${texeci 60000 fortune}}
 ${font}${color3}Date: ${alignr}${color}${time %a, %d %B %Y}
 ${color3}Kernel: ${alignr}${color}${kernel}
@@ -115,9 +115,9 @@ ${color3}Last Update: ${alignr}${color}${texeci 60 ls -l /var/cache/apt/pkgcache
 #------------+
 #CPU
 #------------+
-${font}${color1}PROCESSOR ${hr 2}
+${font Roboto Black:size=11}${color1}PROCESSOR ${hr 2}
 ${voffset 5}${font}${color3}Name: $color${texeci 6000 cat /proc/cpuinfo | grep 'model name' | sed -e 's/model name.*: //'| uniq | cut -c 1-16}${alignr}${color3}
-${color3}Freq: $color${freq_g} GHz          ${color3}Temp: $color${texeci 5 sensors | grep Tdie: | cut -c 16-19}°C${color3}${alignr}$alignr${color3}Usage: $color${cpu}%
+${color3}Freq: $color${freq_g} GHz          ${color3}Temp: $color${texeci 5 sensors | grep Tctl: | cut -c 16-19}°C${color3}${alignr}$alignr${color3}Usage: $color${cpu}%
 ${color4}${cpugraph 26}
 #------------+
 #CPU CORES
@@ -145,7 +145,7 @@ ${color3}Processes: ${color}${processes}${alignr}${color3}Running:$color ${runni
 #------------+
 #MEMORY
 #------------+
-${font}${color1}MEMORY ${hr 2}
+${font Roboto Black:size=11}${color1}MEMORY ${hr 2}
 ${voffset 5}${font}${color3}Used: ${color}${mem} ($memperc%)${color3}${alignr}Free: ${color}${memeasyfree}
 ${color4}${membar}
 ${voffset 5}${color3}Name${alignr}MEM%
@@ -157,8 +157,8 @@ ${top_mem name 4} ${alignr}${top_mem mem 4}
 #------------+
 #DISK
 #------------+
-${font}${color1}DISKS ${hr 2}
-${color3}${texeci 6000 lsblk | awk '/disk/' | awk NF=1 |sed -e 's/$/  /'| sed ':a;/$/{N;s/\n//;ba}'}
+${font Roboto Black:size=11}${color1}DISKS ${hr 2}
+${voffset 5}${font}${color3}${texeci 6000 lsblk | awk '/disk/' | awk NF=1 |sed -e 's/$/  /'| sed ':a;/$/{N;s/\n//;ba}'}
 ${voffset 5}${font}${color3}Used /: ${color}${fs_used /} ${color3}${alignr}Free: ${color}${fs_free /}
 ${color4}${fs_bar /}
 ${voffset 5}${font}${color3}Used /home: ${color}${fs_used /home} ${color3}${alignr}Free: ${color}${fs_free /home}
@@ -169,12 +169,13 @@ ${diskiograph 24,260 32a964 ec7063 -t -l}
 #------------+
 #NETWORK
 #------------+
-${font}${color1}NETWORK ${hr 2}
-${voffset 5}${font}${color3}${addr enp37s0} / ${texeci 60 ip a | grep inet | grep -vw lo | grep -v inet6 | cut -d \/ -f1 | sed 's/[^0-9\.]*//g' | tail -n 1}${alignr}${font}${color}${if_existing /sys/class/net/enp37s0/operstate up}ONLINE${else}OFFLINE${endif}
+${font Roboto Black:size=11}${color1}NETWORK ${hr 2}
+${voffset 5}${font}${color3}${addr enp37s0} / ${texeci 60 curl ipinfo.io/ip}${alignr}${font}${color}${if_existing /sys/class/net/enp37s0/operstate up}ONLINE${else}OFFLINE${endif}
 
 ${color3}Down: ${color}${downspeed enp37s0}/s  ${color3}${alignr} Total: ${color}${totaldown enp37s0}
 ${color4}${downspeedgraph enp37s0 30}${color}
 ${color3}Up: ${color}${upspeed enp37s0}/s      ${color3}${alignr} Total: ${color}${totalup enp37s0}
 ${color4}${upspeedgraph enp37s0 30 }${color}
+# ${texeci 60 lsof -i -P -n | grep -E 'LISTEN|ESTABLISHED' | tr -s ' ' | cut -d' ' -f1,2,8,9}
 #TODO: Add Graphics card and used ports and connections(ip+protocol), weather, list all drives/paritions, most twittered/googled, news
 ]]
