quit explorer on open

--- a/vim/nvim/coc-settings.json
+++ b/vim/nvim/coc-settings.json
@@ -5,6 +5,7 @@
 	"suggest.enablePreview": true,
 	"suggest.enablePreselect": false,
 	"suggest.noselect": true,
+  "explorer.quitOnOpen": true,
   "explorer.file.showHiddenFiles": true,
   "explorer.position": "left",
   "ltex.language": "de-DE",
