update conky seetings

--- a/.conky/frequential_conky.conf
+++ b/.conky/frequential_conky.conf
@@ -110,7 +110,7 @@ ${font}${color3}Date: ${alignr}${color}${time %a, %d %B %Y}
 ${color3}Kernel: ${alignr}${color}${kernel}
 ${color3}Distro: ${alignr}${color}${texeci 6000 lsb_release -d | grep 'Descr'|awk {'print $2 " " $3" " $4"" $5'}}
 ${color3}Uptime: ${alignr}${color}${uptime}
-${color3}Last Update: ${alignr}${color}${texeci 60 ls -l /var/cache/apt/pkgcache.bin --time-style="+%T: %a, %d %B %Y" | cut -d' ' -f6,7,8,9,10}
+${color3}Last Upgrade: ${alignr}${color}${texeci 60 stat -c %Y /var/lib/apt/periodic/upgrade-stamp | awk '{ print strftime("%T : %a, %d %B %Y", $1) }'}
 
 #------------+
 #CPU
@@ -139,7 +139,7 @@ ${top name 3} ${alignr}${top cpu 3}
 ${top name 4} ${alignr}${top cpu 4}
 ${top name 5} ${alignr}${top cpu 5}
 
-${voffset 5}${color3}Threads: ${color}$threads${alignr}${color3}Running: ${color}${running_threads}
+${voffset 5}${color3}Threads: ${color}${threads}${alignr}${color3}Running: ${color}${running_threads}
 ${color3}Processes: ${color}${processes}${alignr}${color3}Running:$color ${running_processes}
 
 #------------+
