--- a/vim/nvim/coc-settings.json
+++ b/vim/nvim/coc-settings.json
@@ -7,6 +7,7 @@
 	"suggest.noselect": true,
   "explorer.file.showHiddenFiles": true,
   "explorer.position": "left",
+  "explorer.quitOnOpen": true,
   "ltex.language": "de-DE",
   "texlab.build.onSave": true,
   "texlab.build.forwardSearchAfter": true,
