--- a/.conky/frequential_conky.conf
+++ b/.conky/frequential_conky.conf
@@ -105,12 +105,12 @@ conky.config = {
 
 conky.text = [[
 ${font Roboto Black:size=45}${color1}${alignc}${time %H:%M}
-${voffset -36}${font}${scroll 50 ${color}${texeci 60000 fortune}}
+${voffset -36}${font}${scroll 50 5 ${color}${texeci 60000 fortune}}
 ${font}${color3}Date: ${alignr}${color}${time %a, %d %B %Y}
 ${color3}Kernel: ${alignr}${color}${kernel}
 ${color3}Distro: ${alignr}${color}${texeci 6000 lsb_release -d | grep 'Descr'|awk {'print $2 " " $3" " $4"" $5'}}
 ${color3}Uptime: ${alignr}${color}${uptime}
-${color3}Last Upgrade: ${alignr}${color}${texeci 60 stat -c %Y /var/lib/apt/periodic/upgrade-stamp | awk '{ print strftime("%T : %a, %d %B %Y", $1) }'}
+${color3}Last Upgrade: ${alignr}${color}${texeci 60 ls -l --time-style="+%H:%M %a, %d %B %Y" /var/lib/apt/periodic/update-success-stamp | awk '{print $6" "$7" "$8" "$9" "$10}'}
 
 #------------+
 #CPU
@@ -132,12 +132,12 @@ ${voffset 2}${color3}11${goto 45}$color${cpu cpu11}%${goto 85}${color4}${cpubar 
 #------------+
 #PROCESSES
 #------------+
-${voffset 5}${color3}Name${alignr}CPU%
-$color4${top name 1}$alignr${top cpu 1}$color
-${top name 2} ${alignr}${top cpu 2}
-${top name 3} ${alignr}${top cpu 3}
-${top name 4} ${alignr}${top cpu 4}
-${top name 5} ${alignr}${top cpu 5}
+${voffset 5}${color3}PID${alignc}${color3}Name${alignr}CPU%
+$color4${top pid 1}${alignc}${top name 1}$alignr${top cpu 1}$color
+${top pid 2}${alignc}${top name 2}${alignr}${top cpu 2}
+${top pid 3}${alignc}${top name 3}${alignr}${top cpu 3}
+${top pid 4}${alignc}${top name 4}${alignr}${top cpu 4}
+${top pid 5}${alignc}${top name 5}${alignr}${top cpu 5}
 
 ${voffset 5}${color3}Threads: ${color}${threads}${alignr}${color3}Running: ${color}${running_threads}
 ${color3}Processes: ${color}${processes}${alignr}${color3}Running:$color ${running_processes}
